Ensure .alertify-logs shrink-wraps contents
Avoids blocking click events below log windows

--- a/themes/alertify.core.css
+++ b/themes/alertify.core.css
@@ -55,7 +55,7 @@
 .alertify-logs {
 	position: fixed;
 	z-index: 5000;
-	bottom: 10px;
+	bottom: inherit;
 	right: 10px;
 	width: 300px;
 }
